--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "start:dev": "node server.js",
+    "start:dev": "node server.js"
   },
   "author": "",
   "license": "ISC",
